<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="categories" type="com.example.todos.model.CategoryList"/>
        <variable name="category" type="com.example.todos.model.Category"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_new_category"
            android:text="@={category.description}"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnAdd"
                style="@android:style/Widget.Button"
                android:layout_width="@dimen/btnSize"
                android:layout_height="@dimen/btnSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:drawableTop="@drawable/tag_text_outline"
                android:text="@string/newCategory" />

            <Button
                android:id="@+id/btnSave"
                style="@android:style/Widget.Button"
                android:layout_width="@dimen/btnSize"
                android:layout_height="@dimen/btnSize"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:drawableTop="@android:drawable/ic_menu_save"
                android:text="@string/save_category" />


            <Button
                android:id="@+id/btnDelete"
                style="@android:style/Widget.Button"
                android:layout_width="@dimen/btnSize"
                android:layout_height="@dimen/btnSize"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:drawableTop="@android:drawable/ic_menu_delete"
                android:text="@string/delete_category" />

        </RelativeLayout>
        <ListView
            android:id="@+id/lvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            bind:items="@{categories.ItemList}"
            />



    </LinearLayout>
</layout>